[project]
name = "travelodigos-orchestrator"
version = "0.1.0"
description = "Backend Orchestrator Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-decorators==1.0.20",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "pydantic[email,timezone]>=2.12.5",
    "python-dotenv>=1.2.2",
]
